@startuml
enum SatelliteResultType {
    Success,
    Crash,
    NotOrbit,
    NonResult,
}
class SatelliteChallengeManger {
    + angleThreshold : float
    + checkTime : float = 5f
    + isSuccess : bool <<get>> <<set>> = true
    + isCheckEnd : bool <<get>> <<set>>
    + CallCheck() : void
}
MonoBehaviour <|-- SatelliteChallengeManger
SatelliteChallengeManger --> "satellite" Satellite
SatelliteChallengeManger --> "target" AstralBody
SatelliteChallengeManger --> "satelliteResultType" SatelliteResultType
@enduml
